# Trabajo2_PC

./: Makefile  README.md  pyproject.toml
pokedex_db/: .gitignore  database.py  main.py  models.py  pyproyect.toml  queries.py  requirements.txt  seed.py
