[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Trabajo2_PC"
version = "0.0.1"
description = "Segundo trabajo de Programaci\u00f3n Cient\u00edfica"
authors = [
  { name = "Vicente Castro y Mayckol Olivares" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.10.0"


[tool.ruff]
line-length = 99
src = ["Trabajo2_PC"]
include = ["pyproject.toml", "Trabajo2_PC/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Trabajo2_PC"]
force-sort-within-sections = true

